test user button added

--- a/src/index.css
+++ b/src/index.css
@@ -794,3 +794,42 @@ nav {
   border-radius: 4px;
   cursor: pointer;
 }
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 65px;
+  display: grid;
+  --mask: radial-gradient(12px at left 15px top 50%, #0000 95%, #000),
+    radial-gradient(12px at right 15px top 50%, #0000 95%, #000);
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+  -webkit-mask-composite: source-in;
+  mask-composite: intersect;
+  animation: l1 1s infinite alternate;
+}
+.loader:before,
+.loader:after {
+  content: '';
+  grid-area: 1/1;
+  height: 30px;
+  aspect-ratio: 1;
+  background: #fff;
+  border-radius: 50%;
+}
+.loader:after {
+  margin-left: auto;
+}
+@keyframes l1 {
+  to {
+    width: 40px;
+  }
+}
+
+.test-btn-inner-wrap {
+  display: flex;
+  align-items: center;
+}
+
+.test-btn-inner-wrap p {
+  margin-right: .5rem;
+}
