--- a/src/index.css
+++ b/src/index.css
@@ -341,9 +341,16 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   cursor: pointer;
   border-radius: 0.5rem;
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+.admin-icon{
+  /* border: 1px solid; */
+  font-size: 3rem;
 }
 
 .admin-manage-section {
